Blogs Grid added in Business Insights updated

--- a/business-insights.html
+++ b/business-insights.html
@@ -176,9 +176,7 @@
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
                 Real estate investments have the muscle to unlock endless
-                opportunities for those who compel to the business or to save
-                for the better future. The passive income that each investment
-                produces with the passage of time
+                opportunities for those...
               </p>
               <a
                 href="blogs/advantages-of-investment-in-real-estate.html"
@@ -199,9 +197,7 @@
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
                 New metro city Gujar Khan Files bookings are now open at Regal
-                Marketing and a good number of files are available at our
-                office. New Metro City Gujar Khan Early Bird Balloting has been
-                announced by BSM developers.
+                Marketing and a good...
               </p>
               <a
                 href="blogs/early-bird-balloting.html"
@@ -222,9 +218,7 @@
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
                 After getting huge accomplishments in New Metro City Kharian and
-                Golf City Gwadar, BSM Developer is going to construct a new
-                project named “New Metro City Gujar khan”. The project offers
-                all the up-to-date facilities
+                Golf City Gwadar, BSM...
               </p>
               <a
                 href="blogs/a-golden-investment-opportunity.html"
@@ -247,9 +241,7 @@
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
                 Real estate investments have the muscle to unlock endless
-                opportunities for those who compel to the business or to save
-                for the better future. The passive income that each investment
-                produces with the passage of time
+                opportunities for those...
               </p>
               <a
                 href="blogs/advantages-of-investment-in-real-estate.html"
