Blogs Grid added in Business Insights updated

--- a/business-insights.html
+++ b/business-insights.html
@@ -176,7 +176,7 @@
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
                 Real estate investments have the muscle to unlock endless
-                opportunities for those...
+                opportunities ...
               </p>
               <a
                 href="blogs/advantages-of-investment-in-real-estate.html"
@@ -196,8 +196,7 @@
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
-                New metro city Gujar Khan Files bookings are now open at Regal
-                Marketing and a good...
+                New metro city Gujar Khan Files bookings are now open ...
               </p>
               <a
                 href="blogs/early-bird-balloting.html"
@@ -218,7 +217,7 @@
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
                 After getting huge accomplishments in New Metro City Kharian and
-                Golf City Gwadar, BSM...
+                ...
               </p>
               <a
                 href="blogs/a-golden-investment-opportunity.html"
@@ -241,7 +240,7 @@
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
                 Real estate investments have the muscle to unlock endless
-                opportunities for those...
+                opportunities ...
               </p>
               <a
                 href="blogs/advantages-of-investment-in-real-estate.html"
