--- a/business-insights.html
+++ b/business-insights.html
@@ -250,6 +250,93 @@
               >
             </div>
           </div>
+          <div class="card" data-aos="zoom-in">
+            <div class="img-wrapper">
+              <img src="images/blog-1.jpg" />
+            </div>
+            <div class="card-content">
+              <a href="blogs/advantages-of-investment-in-real-estate.html">
+                <h1 data-aos="fade-up">
+                  Advantages of Investment in Real Estate
+                </h1>
+              </a>
+              <span data-aos="fade-up">August 29, 2022</span>
+              <p data-aos="fade-up">
+                Real estate investments have the muscle to unlock endless
+                opportunities ...
+              </p>
+              <a
+                href="blogs/advantages-of-investment-in-real-estate.html"
+                class="read-more"
+                data-aos="fade-up"
+                >Read More</a
+              >
+            </div>
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <div class="img-wrapper">
+              <img src="images/blog-2.jpg" />
+            </div>
+            <div class="card-content">
+              <a href="blogs/early-bird-balloting.html">
+                <h1 data-aos="fade-up">Early Bird Balloting</h1>
+              </a>
+              <span data-aos="fade-up">August 29, 2022</span>
+              <p data-aos="fade-up">
+                New metro city Gujar Khan Files bookings are now open ...
+              </p>
+              <a
+                href="blogs/early-bird-balloting.html"
+                class="read-more"
+                data-aos="fade-up"
+                >Read More</a
+              >
+            </div>
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <div class="img-wrapper">
+              <img src="images/blog-3.jpg" />
+            </div>
+            <div class="card-content">
+              <a href="blogs/a-golden-investment-opportunity.html">
+                <h1 data-aos="fade-up">A Golden Investment Opportunity</h1>
+              </a>
+              <span data-aos="fade-up">August 29, 2022</span>
+              <p data-aos="fade-up">
+                After getting huge accomplishments in New Metro City Kharian and
+                ...
+              </p>
+              <a
+                href="blogs/a-golden-investment-opportunity.html"
+                class="read-more"
+                data-aos="fade-up"
+                >Read More</a
+              >
+            </div>
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <div class="img-wrapper">
+              <img src="images/blog-1.jpg" />
+            </div>
+            <div class="card-content">
+              <a href="blogs/advantages-of-investment-in-real-estate.html">
+                <h1 data-aos="fade-up">
+                  Advantages of Investment in Real Estate
+                </h1>
+              </a>
+              <span data-aos="fade-up">August 29, 2022</span>
+              <p data-aos="fade-up">
+                Real estate investments have the muscle to unlock endless
+                opportunities ...
+              </p>
+              <a
+                href="blogs/advantages-of-investment-in-real-estate.html"
+                class="read-more"
+                data-aos="fade-up"
+                >Read More</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </section>
