News Section start

--- a/business-insights.html
+++ b/business-insights.html
@@ -341,6 +341,25 @@
       </div>
     </section>
 
+    <!-- Blogs Section -->
+    <section
+      class="articles"
+      style="
+        background-image: url('images/new-header-2.png');
+        background-position: center center;
+        background-size: cover;
+      "
+    >
+      <h1 data-aos="fade-bottom">Regal News</h1>
+      <div class="bar-line"></div>
+      <p data-aos="fade-bottom">
+        Not worthy information latest events and market trends are all here.
+      </p>
+      <button class="btn btn-primary" data-aos="fade-bottom">
+        VIEW ALL NEWS
+      </button>
+    </section>
+
     <footer>
       <div class="row">
         <div class="col">
