Business insights page complete

--- a/business-insights.html
+++ b/business-insights.html
@@ -341,7 +341,7 @@
       </div>
     </section>
 
-    <!-- Blogs Section -->
+    <!-- News Section -->
     <section
       class="articles"
       style="
@@ -358,6 +358,44 @@
       <button class="btn btn-primary" data-aos="fade-bottom">
         VIEW ALL NEWS
       </button>
+    </section>
+
+    <!-- News Grid Section -->
+    <section class="news-grid">
+      <div class="container">
+        <div class="card-wrapper">
+          <div class="card">
+            <div class="card-content">
+              <span>Business News | 29 August 2022</span>
+              <h2>
+                3564 low budget living units completed under Naya Pakistan
+                Housing Program
+              </h2>
+              <p>Read News »</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-content">
+              <span>Business News | 29 August 2022</span>
+              <h2>
+                3564 low budget living units completed under Naya Pakistan
+                Housing Program
+              </h2>
+              <p>Read News »</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-content">
+              <span>Business News | 29 August 2022</span>
+              <h2>
+                3564 low budget living units completed under Naya Pakistan
+                Housing Program
+              </h2>
+              <p>Read News »</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer>
