News Section finished

--- a/business-insights.html
+++ b/business-insights.html
@@ -366,7 +366,7 @@
         <div class="card-wrapper">
           <div class="card">
             <div class="card-content">
-              <span>Business News | 29 August 2022</span>
+              <span>Regal News | 20 August 2022</span>
               <h2>
                 3564 low budget living units completed under Naya Pakistan
                 Housing Program
@@ -376,7 +376,7 @@
           </div>
           <div class="card">
             <div class="card-content">
-              <span>Business News | 29 August 2022</span>
+              <span>Regal News | 24 August 2022</span>
               <h2>
                 3564 low budget living units completed under Naya Pakistan
                 Housing Program
@@ -386,7 +386,7 @@
           </div>
           <div class="card">
             <div class="card-content">
-              <span>Business News | 29 August 2022</span>
+              <span>Regal News | 28 August 2022</span>
               <h2>
                 3564 low budget living units completed under Naya Pakistan
                 Housing Program
