News Section finished

--- a/business-insights.html
+++ b/business-insights.html
@@ -371,7 +371,7 @@
                 3564 low budget living units completed under Naya Pakistan
                 Housing Program
               </h2>
-              <p>Read News »</p>
+              <a href="">Read News »</a>
             </div>
           </div>
           <div class="card">
@@ -381,7 +381,7 @@
                 3564 low budget living units completed under Naya Pakistan
                 Housing Program
               </h2>
-              <p>Read News »</p>
+              <a href="">Read News »</a>
             </div>
           </div>
           <div class="card">
@@ -391,7 +391,7 @@
                 3564 low budget living units completed under Naya Pakistan
                 Housing Program
               </h2>
-              <p>Read News »</p>
+              <a href="">Read News »</a>
             </div>
           </div>
         </div>
