Changes in New Website

--- a/home.html
+++ b/home.html
@@ -74,10 +74,50 @@
       </div>
     </header>
 
+    <!--About Section-->
+    <section class="about">
+      <div class="container">
+        <h1 class="section-heading" data-aos="fade-up">Who we Are</h1>
+        <p data-aos="fade-up">Your No. 1 Property Advisory in the Town</p>
+        <div class="container flex items-center">
+          <div class="flex-1">
+            <img
+              class="about-me-img"
+              src="images/about-us.png"
+              alt=""
+              data-aos="zoom-in"
+            />
+          </div>
+          <div class="flex-1">
+            <h1 class="news-title" data-aos="fade-bottom">
+              WE HAVE MORE THAN 7 YEARS OF EXPERIENCE
+            </h1>
+            <p class="news-body" data-aos="fade-bottom">
+              Regal Marketing Network is among the fastest-growing marketing
+              network around the world having its offices in many cities of
+              Pakistan and also worldwide agents. The company deals in all
+              matters of housing societies, residential plots, commercial plots
+              and property. We are a team of highly professional people with 7+
+              years of combined experience in real estate. Regal marketing
+              private limited is the name of the trust; we focus on building
+              long-term relationships with our client partners. We are
+              passionate about building client’s value. We start with extensive
+              research and accomplish the matured implementation right from the
+              first step to property planning and profit placement. We
+              understand that all clients have unique needs and we strive to
+              custom tailor programs to accomplish each individual’s goals and
+              dreams. We will listen and work relentlessly for you this is our
+              promise.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!--Our Work Section-->
     <section class="work">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Feature Products</h1>
+        <h1 class="section-heading" data-aos="fade-up">Feature Projects</h1>
         <p data-aos="fade-up">Ultra modern and cost effective projects</p>
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
@@ -104,6 +144,35 @@
               <a href="projects/new-metro-city.html">Gujar Khan</a>
             </div>
             <img src="images/featured-product-3.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Our Service Section -->
+    <section class="products">
+      <div class="container">
+        <h1 class="section-heading" data-aos="fade-up">Feature Products</h1>
+        <p data-aos="fade-up">
+          Standing close to our Customers, as we are ready to serve you with
+          improved Solutions
+        </p>
+        <div class="card-wrapper">
+          <div class="card" data-aos="zoom-in">
+            <h2 data-aos="fade-up">Regal Emporium</h2>
+            <p data-aos="fade-up">
+              Regal Emporium Located in the heart of Islamabad, Regal Emporium
+              is one of the absolute and extravagant commercial projects in the
+              commercial downtown of Park View City Islamabad.
+            </p>
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <h2 data-aos="fade-up">Construction Solutions</h2>
+            <p data-aos="fade-up">
+              Trade your assets with us. You might be able to build a larger and
+              more valuable property than you could have on each parcel
+              separately.
+            </p>
           </div>
         </div>
       </div>
@@ -361,6 +430,71 @@
               onclick="showReview()"
               data-aos="fade-up"
             />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact">
+      <div class="container">
+        <h1 class="section-heading" data-aos="fade-up">Contact Us</h1>
+        <p data-aos="fade-up">Feel Free to Reach Out or Contact Us</p>
+        <div class="content">
+          <div class="contactInfo">
+            <div class="box">
+              <div class="icon">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+              </div>
+              <div class="text">
+                <h3>Address</h3>
+                <p>
+                  1st Floor, Zamzam Arcade, Plaza 1-A, <br />
+                  Street # 39, Alia Market, G-13/2, Islamabad
+                </p>
+              </div>
+            </div>
+            <div class="box">
+              <div class="icon">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+              </div>
+              <div class="text">
+                <h3>Phone</h3>
+                <p>+92-334-9000007</p>
+              </div>
+            </div>
+            <div class="box">
+              <div class="icon">
+                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+              </div>
+              <div class="text">
+                <h3>Email</h3>
+                <p>info@regalmarketing.com.pk</p>
+              </div>
+            </div>
+          </div>
+          <div class="contactForm">
+            <form>
+              <h2>Send Message</h2>
+              <div class="inputBox">
+                <input type="text" name="" required />
+                <span>Full Name</span>
+              </div>
+              <div class="inputBox">
+                <input type="text" name="" required />
+                <span>Email</span>
+              </div>
+              <div class="inputBox">
+                <input type="text" name="" required />
+                <span>Phone Number </span>
+              </div>
+              <div class="inputBox">
+                <textarea required></textarea>
+                <span>Type your Message...</span>
+              </div>
+              <div class="inputBox">
+                <input type="submit" name="" value="Send" />
+              </div>
+            </form>
           </div>
         </div>
       </div>
