Design Products page services page and projects page

--- a/business-insights.html
+++ b/business-insights.html
@@ -39,7 +39,13 @@
             <a href="about.html">About Us</a>
           </li>
           <li data-aos="zoom-out">
-            <a href="product&services.html">Products & Services</a>
+            <a href="projects.html">Projects</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="products.html">Products</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="services.html">Services</a>
           </li>
           <li data-aos="zoom-out">
             <a href="business-insights.html" style="color: #f9ae41"
