--- a/home.html
+++ b/home.html
@@ -52,7 +52,13 @@
         <ul id="menu">
           <li data-aos="zoom-out"><a href="about.html">About Us</a></li>
           <li data-aos="zoom-out">
-            <a href="product&services.html">Products & Services</a>
+            <a href="projects.html">Projects</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="products.html">Products</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="services.html">Services</a>
           </li>
           <li data-aos="zoom-out">
             <a href="business-insights.html">Business Insights</a>
@@ -77,7 +83,7 @@
     <!--About Section-->
     <section class="about">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Who we Are</h1>
+        <h1 class="section-heading" data-aos="fade-up">About Regal</h1>
         <p data-aos="fade-up">Your No. 1 Property Advisory in the Town</p>
         <div class="container flex items-center">
           <div class="flex-1">
@@ -149,7 +155,7 @@
       </div>
     </section>
 
-    <!-- Our Service Section -->
+    <!-- Our Product Section -->
     <section class="products">
       <div class="container">
         <h1 class="section-heading" data-aos="fade-up">Feature Products</h1>
