--- a/projects/sports-valley.html
+++ b/projects/sports-valley.html
@@ -366,8 +366,14 @@
           <ul>
             <li data-aos="fade-up"><a href="../home.html">Home</a></li>
             <li data-aos="fade-up"><a href="../about.html">About</a></li>
-            <li data-aos="fade-up">
-              <a href="../product&services.html">Products & Services</a>
+            <li data-aos="zoom-out">
+              <a href="../projects.html">Projects</a>
+            </li>
+            <li data-aos="zoom-out">
+              <a href="../products.html">Products</a>
+            </li>
+            <li data-aos="zoom-out">
+              <a href="../services.html">Services</a>
             </li>
             <li data-aos="fade-up"><a href="../business-insights.html">Business Insights</a></li>
             <li data-aos="fade-up"><a href="../videos.html">Videos</a></li>
