--- a/services.html
+++ b/services.html
@@ -39,9 +39,13 @@
             <a href="about.html">About Us</a>
           </li>
           <li data-aos="zoom-out">
-            <a href="product&services.html" style="color: #f9ae41"
-              >Products & Services</a
-            >
+            <a href="projects.html">Projects</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="products.html">Products</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="services.html" style="color: #f9ae41">Services</a>
           </li>
           <li data-aos="zoom-out">
             <a href="business-insights.html">Business Insights</a>
@@ -52,68 +56,9 @@
         </ul>
       </nav>
       <div class="about-us">
-        <h1 data-aos="fade-up">Products & Services</h1>
+        <h1 data-aos="fade-up">Services</h1>
       </div>
     </header>
-
-    <!--Our Work Section-->
-    <section class="work">
-      <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Our Products</h1>
-        <p data-aos="fade-up">Ultra modern and cost effective projects</p>
-        <div class="card-wrapper">
-          <div class="card" data-aos="zoom-in">
-            <div class="overlay">
-              <span>Regal Emporium</span>
-              <a href="#">Park View City Islamabad</a>
-            </div>
-            <img src="images/featured-product-1.jpg" alt="" />
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <div class="overlay">
-              <span>Blue World Sports Valley</span>
-              <a href="#">Chakri Interchange Islamabad</a>
-            </div>
-            <img src="images/featured-product-2.jpg" alt="" />
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <div class="overlay">
-              <span>New Metro City</span>
-              <a href="#">Gujar Khan</a>
-            </div>
-            <img src="images/featured-product-3.jpg" alt="" />
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <div class="overlay">
-              <span>Regal Emporium</span>
-              <a href="#">Park View City Islamabad</a>
-            </div>
-            <img src="images/featured-product-1.jpg" alt="" />
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <div class="overlay">
-              <span>Blue World Sports Valley</span>
-              <a href="#">Chakri Interchange Islamabad</a>
-            </div>
-            <img src="images/featured-product-2.jpg" alt="" />
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <div class="overlay">
-              <span>New Metro City</span>
-              <a href="#">Gujar Khan</a>
-            </div>
-            <img src="images/featured-product-3.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-      <div
-        class="flex align-center justify-center"
-        style="margin-top: 40px"
-        data-aos="zoom-in"
-      >
-        <button class="btn btn-primary">Explore More Products</button>
-      </div>
-    </section>
 
     <!-- Our Service Section -->
     <section class="services">
@@ -187,13 +132,6 @@
             </p>
           </div>
         </div>
-      </div>
-      <div
-        class="flex align-center justify-center"
-        style="margin-top: 40px"
-        data-aos="zoom-in"
-      >
-        <button class="btn btn-primary">Explore More Services</button>
       </div>
     </section>
 
