--- a/about.html
+++ b/about.html
@@ -39,7 +39,13 @@
             <a href="about.html" style="color: #f9ae41">About Us</a>
           </li>
           <li data-aos="zoom-out">
-            <a href="product&services.html">Products & Services</a>
+            <a href="projects.html">Projects</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="products.html">Products</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="services.html">Services</a>
           </li>
           <li data-aos="zoom-out">
             <a href="business-insights.html">Business Insights</a>
@@ -50,7 +56,7 @@
         </ul>
       </nav>
       <div class="about-us">
-        <h1 data-aos="fade-up">About Us</h1>
+        <h1 data-aos="fade-up">About Regal</h1>
       </div>
     </header>
 
