--- a/blogs/a-golden-investment-opportunity.html
+++ b/blogs/a-golden-investment-opportunity.html
@@ -48,7 +48,13 @@
             <a href="../about.html">About Us</a>
           </li>
           <li data-aos="zoom-out">
-            <a href="../product&services.html">Products & Services</a>
+            <a href="../projects.html">Projects</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="../products.html">Products</a>
+          </li>
+          <li data-aos="zoom-out">
+            <a href="../services.html">Services</a>
           </li>
           <li data-aos="zoom-out">
             <a href="../business-insights.html">Business Insights</a>
