--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-    <title>Regal Marketing | Contact</title>
+    <title>Regal Marketing | Products & Services</title>
 
     <link
       rel="stylesheet"
@@ -39,7 +39,7 @@
             <a href="about.html">About Us</a>
           </li>
           <li data-aos="zoom-out">
-            <a href="projects.html">Projects</a>
+            <a href="projects.html" style="color: #f9ae41">Projects</a>
           </li>
           <li data-aos="zoom-out">
             <a href="products.html">Products</a>
@@ -52,118 +52,65 @@
           </li>
           <li data-aos="zoom-out"><a href="videos.html">Videos</a></li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
-          <li data-aos="zoom-out">
-            <a href="contact.html" style="color: #f9ae41">Contact</a>
-          </li>
+          <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="about-us">
-        <h1 data-aos="fade-up">Contact Us</h1>
+        <h1 data-aos="fade-up">Projects</h1>
       </div>
     </header>
 
-    <div class="contact-us">
-      <div class="title flex justify-center items-center">
-        <h2>Get in Touch</h2>
-      </div>
-      <div class="box">
-        <div class="contact form">
-          <h3>Send a message</h3>
-          <form action="">
-            <div class="form-box">
-              <div class="row50">
-                <div class="input-box">
-                  <span>First Name</span>
-                  <input type="text" placeholder="John" name="" id="" />
-                </div>
-                <div class="input-box">
-                  <span>Last Name</span>
-                  <input type="text" placeholder="Doe" name="" id="" />
-                </div>
-              </div>
-              <div class="row50">
-                <div class="input-box">
-                  <span>Email</span>
-                  <input
-                    type="text"
-                    placeholder="example@gmail.com"
-                    name=""
-                    id=""
-                  />
-                </div>
-                <div class="input-box">
-                  <span>Mobile</span>
-                  <input
-                    type="text"
-                    placeholder="+92-334 5685263"
-                    name=""
-                    id=""
-                  />
-                </div>
-              </div>
-              <div class="row100">
-                <div class="input-box">
-                  <span>Message</span>
-                  <textarea
-                    placeholder="Write your message here... "
-                  ></textarea>
-                </div>
-              </div>
-              <div class="row100">
-                <div class="input-box">
-                  <input type="submit" value="Send" />
-                </div>
-              </div>
+    <!--Our Work Section-->
+    <section class="work">
+      <div class="container">
+        <h1 class="section-heading" data-aos="fade-up">Our Projects</h1>
+        <p data-aos="fade-up">Ultra modern and cost effective projects</p>
+        <div class="card-wrapper">
+          <div class="card" data-aos="zoom-in">
+            <div class="overlay">
+              <span>Regal Emporium</span>
+              <a href="#">Park View City Islamabad</a>
             </div>
-          </form>
-        </div>
-        <div class="contact info">
-          <h3>Contact Info</h3>
-          <div class="infoBox">
-            <div>
-              <span><ion-icon name="location"></ion-icon></span>
-              <p>
-                1st Floor, Zamzam Arcade, Plaza 1-A, Street # 39, Alia Market,
-                G-13/2, Islamabad
-              </p>
+            <img src="images/featured-product-1.jpg" alt="" />
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <div class="overlay">
+              <span>Blue World Sports Valley</span>
+              <a href="#">Chakri Interchange Islamabad</a>
             </div>
-            <div>
-              <span><ion-icon name="mail"></ion-icon></span>
-              <a href="mailto:info.regalmarketing@gmail.com"
-                >info.regalmarketing@gmail.com</a
-              >
+            <img src="images/featured-product-2.jpg" alt="" />
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <div class="overlay">
+              <span>New Metro City</span>
+              <a href="#">Gujar Khan</a>
             </div>
-            <div>
-              <span><ion-icon name="call"></ion-icon></span>
-              <a href="tel:+923349000007">+92 334 9000007</a>
+            <img src="images/featured-product-3.jpg" alt="" />
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <div class="overlay">
+              <span>Regal Emporium</span>
+              <a href="#">Park View City Islamabad</a>
             </div>
-            <ul class="sci">
-              <li>
-                <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-              </li>
-              <li>
-                <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-              </li>
-              <li>
-                <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
-              </li>
-              <li>
-                <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-              </li>
-            </ul>
+            <img src="images/featured-product-1.jpg" alt="" />
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <div class="overlay">
+              <span>Blue World Sports Valley</span>
+              <a href="#">Chakri Interchange Islamabad</a>
+            </div>
+            <img src="images/featured-product-2.jpg" alt="" />
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <div class="overlay">
+              <span>New Metro City</span>
+              <a href="#">Gujar Khan</a>
+            </div>
+            <img src="images/featured-product-3.jpg" alt="" />
           </div>
         </div>
-        <div class="contact map">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.1353775856405!2d72.95700661454369!3d33.65365394607806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df95e3551fb377%3A0xa9b4fdb900023d2d!2sRegal%20Marketing%20Pvt.%20Ltd.!5e0!3m2!1sen!2s!4v1660913107844!5m2!1sen!2s"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
       </div>
-    </div>
+    </section>
 
     <footer>
       <div class="row">
@@ -250,14 +197,6 @@
     <script
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
-    ></script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
 
     <script src="js/slider.js"></script>
