--- a/home.html
+++ b/home.html
@@ -41,6 +41,8 @@
         </div>
       </div>
       <nav id="navbar">
+        <input type="checkbox" id="check" />
+        <label for="check" class="checkbtn"><i class="fas fa-bars"></i></label>
         <a href="home.html">
           <img
             src="images/logo-secondary.png"
@@ -53,7 +55,40 @@
           <li data-aos="zoom-out"><a href="about.html">About Us</a></li>
           <li data-aos="zoom-out">
             <a href="projects.html">Projects</a>
+            <i
+              class="fa fa-angle-down"
+              style="margin: 5px; cursor: pointer"
+              onclick="toggleMenu()"
+            ></i>
           </li>
+          <div class="sub-menu-wrap" id="subMenu">
+            <div class="sub-menu">
+              <a href="#" class="sub-menu-link">
+                <p>Eighteen</p>
+              </a>
+              <a href="#" class="sub-menu-link">
+                <p>New Metro City Gujar Khan</p>
+              </a>
+              <a href="#" class="sub-menu-link">
+                <p>Blue World City Sports Valley</p>
+              </a>
+              <a href="#" class="sub-menu-link">
+                <p>Blue World Water Front District</p>
+              </a>
+              <a href="#" class="sub-menu-link">
+                <p>Park View City Islamabad</p>
+              </a>
+              <a href="#" class="sub-menu-link">
+                <p>Kingdom Valley</p>
+              </a>
+              <a href="#" class="sub-menu-link">
+                <p>Discovery Garden</p>
+              </a>
+              <a href="#" class="sub-menu-link">
+                <p>1947 Housing</p>
+              </a>
+            </div>
+          </div>
           <li data-aos="zoom-out">
             <a href="products.html">Products</a>
           </li>
