Header Is Fully Responsive Now !

--- a/home.html
+++ b/home.html
@@ -42,9 +42,9 @@
       </div>
       <nav id="navbar">
         <input type="checkbox" id="check" />
-        <label for="check" class="checkbtn"
-          ><i class="fas fa-bars" onclick="showMenu()"></i
-        ></label>
+        <label for="check" class="checkbtn">
+          <i class="fas fa-bars" onclick="showMenu()"></i>
+        </label>
         <a href="home.html">
           <img
             src="images/logo-secondary.png"
