--- a/home.html
+++ b/home.html
@@ -25,6 +25,12 @@
     <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
+    <div class="upper-header">
+      <ul>
+        <li><a href="">Careers</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </div>
     <header>
       <div class="carousel-container">
         <div class="carousel">
