--- a/home.html
+++ b/home.html
@@ -28,7 +28,10 @@
     <div class="upper-header">
       <ul>
         <li><a href="">Careers</a></li>
+        <li><a href="">|</a></li>
         <li><a href="">Contact</a></li>
+        <li><a href="">|</a></li>
+        <li><a href="">+92-334 9000007</a></li>
       </ul>
     </div>
     <header>
