Add tidio on website

--- a/business-insights.html
+++ b/business-insights.html
@@ -274,7 +274,7 @@
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
                 <h1 data-aos="fade-up">
-                  Advantages of Investment in Real Estate
+                  Most Profitable Small Business Ideas in Pakistan
                 </h1>
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
@@ -296,9 +296,7 @@
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
-                <h1 data-aos="fade-up">
-                  Advantages of Investment in Real Estate
-                </h1>
+                <h1 data-aos="fade-up">Technology in Real Estate</h1>
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
@@ -319,7 +317,7 @@
             </div>
             <div class="card-content">
               <a href="blogs/early-bird-balloting.html">
-                <h1 data-aos="fade-up">Early Bird Balloting</h1>
+                <h1 data-aos="fade-up">Ways to Increase Your Property</h1>
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
@@ -339,7 +337,7 @@
             </div>
             <div class="card-content">
               <a href="blogs/a-golden-investment-opportunity.html">
-                <h1 data-aos="fade-up">A Golden Investment Opportunity</h1>
+                <h1 data-aos="fade-up">Designing your House</h1>
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
@@ -360,9 +358,7 @@
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
-                <h1 data-aos="fade-up">
-                  Advantages of Investment in Real Estate
-                </h1>
+                <h1 data-aos="fade-up">Commercial vs Residential</h1>
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
