--- a/home.html
+++ b/home.html
@@ -27,11 +27,11 @@
   <body>
     <div class="upper-header">
       <ul>
+        <li><a>+92 334-9000007</a></li>
+        <li>|</li>
         <li><a href="">Careers</a></li>
-        <li><a href="">|</a></li>
+        <li>|</li>
         <li><a href="">Contact</a></li>
-        <li><a href="">|</a></li>
-        <li><a href="">+92-334 9000007</a></li>
       </ul>
     </div>
     <header>
@@ -639,5 +639,9 @@
 
     <script src="js/slider.js"></script>
     <script src="js/app.js"></script>
+    <script
+      src="//code.tidio.co/pucdhk1f6whym5incqixkz9kfqw6abac.js"
+      async
+    ></script>
   </body>
 </html>
