--- a/products&services.html
+++ b/products&services.html
@@ -92,7 +92,7 @@
         </ul>
       </nav>
       <div class="about-us">
-        <h1 data-aos="fade-up">Products</h1>
+        <h1 data-aos="fade-up">Products & Services</h1>
       </div>
     </header>
 
@@ -136,36 +136,6 @@
           improved Solutions
         </p>
         <div class="card-wrapper">
-          <div class="card" data-aos="zoom-in">
-            <img src="images/asset-management.png" alt="" data-aos="ease-out" />
-            <h2 data-aos="fade-up">Asset Management</h2>
-            <p data-aos="fade-up">
-              Managing workspaces, retail, residential or industrial property,
-              efficiently and cost-effectively, handling the loops and enhancing
-              the worth.
-            </p>
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <img
-              src="images/merge-your-property.png"
-              alt=""
-              data-aos="ease-out"
-            />
-            <h2 data-aos="fade-up">Merge Your Property</h2>
-            <p data-aos="fade-up">
-              Trade your assets with us. You might be able to build a larger and
-              more valuable property than you could have on each parcel
-              separately.
-            </p>
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <img src="images/expert-opinions.png" alt="" data-aos="ease-out" />
-            <h2 data-aos="fade-up">Expert Opinions</h2>
-            <p data-aos="fade-up">
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
-            </p>
-          </div>
           <div class="card" data-aos="zoom-in">
             <img src="images/asset-management.png" alt="" data-aos="ease-out" />
             <h2 data-aos="fade-up">Asset Management</h2>
